[gd_scene load_steps=20 format=2]

[ext_resource path="res://txtrs/Heart/Power Hurt_1.png" type="Texture" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://HUD/pauseMenu.gd" type="Script" id=3]
[ext_resource path="res://fonts/MEPHISTO.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://txtrs/GUI/buttons/resume_button_down.png" type="Texture" id=5]
[ext_resource path="res://txtrs/GUI/buttons/resume_button_up.png" type="Texture" id=6]
[ext_resource path="res://txtrs/GUI/buttons/menu_button_down.png" type="Texture" id=7]
[ext_resource path="res://txtrs/GUI/buttons/quit_button_up.png" type="Texture" id=8]
[ext_resource path="res://txtrs/GUI/buttons/settings_button_up.png" type="Texture" id=9]
[ext_resource path="res://txtrs/GUI/buttons/settings_button_down.png" type="Texture" id=10]
[ext_resource path="res://txtrs/GUI/buttons/menu_button_up.png" type="Texture" id=11]
[ext_resource path="res://txtrs/GUI/buttons/quit_button_down.png" type="Texture" id=12]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://HUD/sprites/Healthbar_1.png" type="Texture" id=14]
[ext_resource path="res://HUD/sprites/Healthbar_2.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=8]
size = 60
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=1]
resource_name = "load_progressbar"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("loadingScreen/ProgressBar:value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 0 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 86
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="hb_sprite" type="Sprite" parent="."]
position = Vector2( 104, 104 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="hp_digital" type="Label" parent="hb_sprite"]
margin_left = -72.0
margin_top = -56.0
margin_right = 72.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 8 )
text = "9
"
align = 1

[node name="healthbar" type="TextureProgress" parent="hb_sprite"]
margin_left = 88.0
margin_top = -80.0
margin_right = 748.0
margin_bottom = 80.0
max_value = 9.0
value = 9.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 14 )

[node name="VFX" type="AnimationPlayer" parent="."]
anims/load_progressbar = SubResource( 1 )

[node name="loadingScreen" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="loadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -156.0
margin_right = 152.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 3 )
text = "Loading..."

[node name="ProgressBar" type="ProgressBar" parent="loadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -888.0
margin_top = 12.0
margin_right = 888.0
margin_bottom = 60.0

[node name="minLoadingTime" type="Timer" parent="loadingScreen/ProgressBar"]
wait_time = 0.6
one_shot = true
autostart = true

[node name="pauseMenu" type="ReferenceRect" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
script = ExtResource( 3 )

[node name="tint" type="ColorRect" parent="pauseMenu"]
margin_left = -760.0
margin_top = -240.0
margin_right = 1160.0
margin_bottom = 840.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Label" type="Label" parent="pauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.5
margin_right = 108.5
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "Pause"
align = 1

[node name="resumeButton" type="TextureButton" parent="pauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -30.0
margin_right = 554.0
margin_bottom = 160.0
rect_scale = Vector2( 0.4, 0.4 )
focus_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="settingButton" type="TextureButton" parent="pauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 98.0
margin_right = 554.0
margin_bottom = 288.0
rect_scale = Vector2( 0.4, 0.4 )
keep_pressed_outside = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="menuButton" type="TextureButton" parent="pauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 226.0
margin_right = 554.0
margin_bottom = 416.0
rect_scale = Vector2( 0.4, 0.4 )
keep_pressed_outside = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="quitButton" type="TextureButton" parent="pauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 354.0
margin_right = 554.0
margin_bottom = 544.0
rect_scale = Vector2( 0.4, 0.4 )
keep_pressed_outside = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 12 )
expand = true

[connection signal="timeout" from="loadingScreen/ProgressBar/minLoadingTime" to="." method="_on_minLoadingTime_timeout"]
[connection signal="pressed" from="pauseMenu/resumeButton" to="pauseMenu" method="_on_resumeButton_pressed"]
[connection signal="pressed" from="pauseMenu/menuButton" to="pauseMenu" method="_on_menuButton_pressed"]
[connection signal="pressed" from="pauseMenu/quitButton" to="pauseMenu" method="_on_quitButton_pressed"]
